--- a/css/style.css
+++ b/css/style.css
@@ -3,3 +3,46 @@
     margin: 0;
     box-sizing: border-box;
 }
+
+body{
+    height: 100vh;
+  
+}
+
+.aside-bar{
+    width: 10%;
+    height: calc(70vh + 100px);
+    background-color: red;
+    float: left;
+}
+
+
+
+.upgrade-bar{
+    height: 100px;
+    position: fixed;
+    top: 0;
+    left: 10%;
+    right: 0;
+    background-color: yellow;
+}
+
+.page{
+    height: 70vh;
+    background-color: pink;
+    float: right;
+    width: 90%;
+    margin-top: 100px;
+    overflow-y: scroll;
+}
+
+.footer{
+    background-color: black;
+    width: 100%;
+    height: 20vh;
+    position: fixed;
+    bottom: 0;
+    left: 0;
+   
+}
+
