--- a/css/style.css
+++ b/css/style.css
@@ -20,13 +20,14 @@ ul{
 /* css aside-bar */
 .aside-bar{
     width: 200px;
-    height: calc(70vh + 100px);
+    height: calc(77vh + 100px);
     background-color: black;
     float: left;
+    position: relative;
 }
 
 .aside-section{
-    width: 90%;
+    width: 80%;
     /* altezza provvisoria? */
     height: 100%;
     margin: 1rem auto;
@@ -37,18 +38,18 @@ ul{
 }
 
 .logo{
-    width: 90%;
+    width: 80%;
     margin-bottom: 0.7rem;
 }
 
 .flex-icon{
     display: flex;
     align-items: center;
-    margin-bottom: 0.3rem;
+    margin-bottom: 0.4rem;
 }
 
 .icons{
-    width: 2rem;
+    width: 1.2rem;
     margin-right: 0.5rem;
 }
 
@@ -59,10 +60,11 @@ ul{
 .aside-bar-list li{
     margin-top: 1rem;
     color: gray;
+    font-size: 0.8rem;
 }
 
 .fa-plus-square{
-    font-size: 2.2rem;
+    font-size: 1.5rem;
     margin-right: 0.5rem;
 }
 
@@ -70,6 +72,39 @@ ul{
     display: flex;
     align-items: center;
 }
+
+.utente{
+    position: absolute;
+    bottom: 0;
+    color: gray;
+    margin-bottom: 0.6rem;
+}
+
+.instal{
+    display: flex;
+    align-items: center;
+}
+
+.dwld{
+    width: 1.2rem;
+    margin-right: 0.5rem;
+}
+
+.gray-br{
+    border-top: 1px solid gray;
+    width: 100%;
+    margin: 0.5rem 0;
+}
+
+.profile{
+    background-color: lightgray;
+    border-radius: 50%;
+    width: 1.5rem;
+    height: 1.5rem;
+}
+    
+
+
 
 
 
@@ -102,7 +137,7 @@ ul{
 
 /* css pagina */
 .page{
-    height: 70vh;
+    height: 81vh;
     background-color: pink;
     float: right;
     width: calc(100% - 200px);
@@ -114,7 +149,7 @@ ul{
 .footer{
     background-color: black;
     width: 100%;
-    height: 20vh;
+    height: 10vh;
     position: fixed;
     bottom: 0;
     left: 0;
