--- a/css/style.css
+++ b/css/style.css
@@ -17,22 +17,33 @@ ul{
     list-style: none;
 }
 
+button{
+    border: none;
+    background: none;
+    color: inherit;
+	border: none;
+    font: inherit;
+    cursor: pointer;
+    padding: 0;
+    outline: inherit;
+}
+
 /* css aside-bar */
 .aside-bar{
     width: 200px;
     height: 90vh;
     background-color: black;
     float: left;
-    position: relative;
 }
 
 .aside-section{
     width: 80%;
     /* altezza provvisoria? */
-    height: 100%;
+    height: 97%;
     margin: 1rem auto;
     display: flex;
     flex-direction: column;
+    justify-content: space-between;
     background-color: black;
     color: white;
 }
@@ -40,6 +51,7 @@ ul{
 .logo{
     width: 80%;
     margin-bottom: 0.7rem;
+    display: flex;
 }
 
 .flex-icon{
@@ -64,8 +76,9 @@ ul{
 }
 
 .fa-plus-square{
-    font-size: 1.5rem;
+    font-size: 2rem;
     margin-right: 0.5rem;
+    vertical-align: middle;
 }
 
 .crea-playlist{
@@ -74,8 +87,7 @@ ul{
 }
 
 .utente{
-    position: absolute;
-    bottom: 0;
+    justify-self: flex-end;
     color: gray;
     margin-bottom: 0.6rem;
 }
@@ -83,12 +95,17 @@ ul{
 .instal{
     display: flex;
     align-items: center;
+    color: gray;
+    justify-self: flex-end;
 }
 
 .dwld{
-    width: 1.2rem;
+    width: 1.4rem;
     margin-right: 0.5rem;
+    vertical-align: middle;
 }
+
+
 
 .gray-br{
     border-top: 1px solid gray;
@@ -101,11 +118,15 @@ ul{
     border-radius: 50%;
     width: 1.5rem;
     height: 1.5rem;
+    margin-right: 0.5rem;
+    vertical-align: middle;
+}
+
+.user{
+    color: white;
+    font-weight: 700;
 }
     
-
-
-
 
 
 
@@ -132,6 +153,7 @@ ul{
     text-align: center;
     font-size: 0.7rem;
     font-weight: 700;
+    margin-right: 1rem;
 }
 
 
@@ -142,12 +164,70 @@ ul{
 /* css pagina */
 .page{
     height: 90vh;
-    background-color: pink;
+    background-color: #141922;
     float: right;
     width: calc(100% - 200px);
     margin-top: 70px;
     overflow-y: scroll;
 }
+
+/* css navbar */
+.navbar{
+    color: gray;
+    width: 100%;
+    height: 60px;
+    background-color: #141922;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+
+.navbar-li{
+    display: inline-block;
+    margin-left: 2rem;
+    font-size: 0.7rem;
+    font-weight: 800;
+}
+
+/* css conteiner-music */
+.conteiner-music{
+    width: 95%;
+    height: calc(100% - 60px);
+    margin: 0 auto;
+}
+
+.music-row{
+    display: flex;
+    width: 100%;
+}
+
+h2{
+    color: white;
+    margin: 1rem 0;
+}
+
+h4{
+    color: white;
+    margin-top: 1rem;
+}
+
+h5{
+    color: gray;
+    margin-top: 0.6rem;
+}
+
+.card{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width:calc(100% / 7 )
+}
+
+.album-img{
+    width: 100%;
+}
+
 
 /* css footer */
 .footer{
