--- a/css/style.css
+++ b/css/style.css
@@ -11,6 +11,7 @@ html{
 
 body{
     height: 100vh;
+    overflow-y: hidden;
 }
 
 ul{
@@ -18,7 +19,6 @@ ul{
 }
 
 button{
-    border: none;
     background: none;
     color: inherit;
 	border: none;
@@ -31,7 +31,7 @@ button{
 /* css aside-bar */
 .aside-bar{
     width: 200px;
-    height: 90vh;
+    height:calc(100vh - 100px);
     background-color: black;
     float: left;
 }
@@ -50,8 +50,8 @@ button{
 
 .logo{
     width: 80%;
-    margin-bottom: 0.7rem;
     display: flex;
+    height: 80px;
 }
 
 .flex-icon{
@@ -163,12 +163,13 @@ button{
 
 /* css pagina */
 .page{
-    height: 90vh;
+    height: 100vh;
     background-color: #141922;
     float: right;
     width: calc(100% - 200px);
     margin-top: 70px;
     overflow-y: scroll;
+    
 }
 
 /* css navbar */
@@ -192,14 +193,16 @@ button{
 
 /* css conteiner-music */
 .conteiner-music{
-    width: 95%;
-    height: calc(100% - 60px);
-    margin: 0 auto;
+    width: 100%;
+    padding: 0 1rem;
+    margin-bottom: 100px;
 }
 
 .music-row{
     display: flex;
     width: 100%;
+    margin-bottom: 2rem;
+    margin-left: 0;
 }
 
 h2{
@@ -209,19 +212,24 @@ h2{
 
 h4{
     color: white;
-    margin-top: 1rem;
+    margin: 1rem;
 }
 
 h5{
     color: gray;
-    margin-top: 0.6rem;
+    
+}
+
+.subtitle-user-music{
+    margin-bottom: 1rem;
 }
 
 .card{
     display: flex;
     flex-direction: column;
     align-items: center;
-    width:calc(100% / 7 )
+    width:calc(100% / 7 );
+    margin-right: 2rem;
 }
 
 .album-img{
@@ -233,7 +241,7 @@ h5{
 .footer{
     background-color: black;
     width: 100%;
-    height: 10vh;
+    height: 100px;
     position: fixed;
     bottom: 0;
     left: 0;
