--- a/css/style.css
+++ b/css/style.css
@@ -135,6 +135,7 @@ button{
     height: 70px;
     position: fixed;
     top: 0;
+    z-index: 1312;
     width: calc(100% - 200px);
     right: 0;
     background-color: rgba(0, 0, 0, 0.8);
@@ -154,6 +155,14 @@ button{
     font-size: 0.7rem;
     font-weight: 700;
     margin-right: 1rem;
+}
+
+.upgrade:hover{
+    transition: all;
+    transition-duration: 1.3s;
+    width: 210px;
+    height: 2.8rem;
+    line-height: 2.8rem;
 }
 
 
