--- a/css/style.css
+++ b/css/style.css
@@ -158,8 +158,7 @@ button{
 }
 
 .upgrade:hover{
-    transition: all;
-    transition-duration: 1.3s;
+    transition: all 1.3s;
     width: 210px;
     height: 2.8rem;
     line-height: 2.8rem;
@@ -198,6 +197,10 @@ button{
     margin-left: 2rem;
     font-size: 0.7rem;
     font-weight: 800;
+}
+
+.hover-white:hover{
+    color: white;
 }
 
 /* css conteiner-music */
