--- a/css/style.css
+++ b/css/style.css
@@ -142,7 +142,7 @@ button{
     z-index: 1312;
     width: calc(100% - 200px);
     right: 0;
-    background-color: rgba(0, 0, 0, 0.8);
+    background-color: rgba(0, 0, 0, 0.9);
     display: flex;
     justify-content: flex-end;
     align-items: center;
@@ -247,6 +247,7 @@ h5{
     align-items: center;
     width:calc(100% / 7 );
     margin-right: 2rem;
+    height: 280px;
 }
 
 .album-img{
