--- a/css/style.css
+++ b/css/style.css
@@ -344,6 +344,7 @@ h5{
     display: flex;
     flex-direction: column;
     align-items: center;
+    width: 40%;
 }
 
 .icons-row{
@@ -353,10 +354,11 @@ h5{
 .time-song{
     display: flex;
     align-items: baseline;
+    width: 100%;
 }
 
 .row-time{
-    width: 400px;
+    width: 100%;
     border-radius: 25px;
     border: 1px solid gray;
     background-color: gray;
@@ -413,7 +415,7 @@ h5{
 
 .icon-rgt{
     font-size: 0.8rem;
-    margin-right: 2rem;
+    margin-right: 1rem;
 }
 
 .row-volume{
@@ -486,5 +488,39 @@ h5{
 
 .play-hover-song:hover .album-img{
     filter: brightness(0.3);
+}
+
+
+
+.button-larghezza{
+    width: 100%;
+}
+/* MEDIA QUERY */
+
+@media screen and (max-width: 768px){
+
+    .music-row{
+        display: flex;
+        flex-wrap: wrap;
+        width: 100%;
+        margin-bottom: 2rem;
+        margin-left: 0;
+
+    }
+
+    .card{
+        width: calc(100% / 5);
+        margin-right: 1rem;
+        height: auto;
+        margin-bottom: 1rem;
+    }
+
+    h4{
+        font-size:smaller;
+    }
+
+    .conteiner-music{
+        margin-top: 10px;
+    }
 }
 
