--- a/css/style.css
+++ b/css/style.css
@@ -54,6 +54,17 @@ button{
     height: 80px;
 }
 
+
+
+.logo-none{
+    width: 40px;
+    display: flex;
+    height: 80px;
+    float: left;
+    display: none;
+    margin-left: -0.5rem;
+}
+
 .flex-icon{
     display: flex;
     align-items: center;
@@ -497,7 +508,7 @@ h5{
 }
 /* MEDIA QUERY */
 
-@media screen and (max-width: 768px){
+@media screen and (max-width: 992px){
 
     .music-row{
         display: flex;
@@ -524,3 +535,128 @@ h5{
     }
 }
 
+
+@media screen and (max-width: 768px){
+
+    .music-row{
+        display: flex;
+        flex-wrap: wrap;
+        width: 100%;
+        margin-bottom: 2rem;
+        margin-left: 0;
+
+    }
+
+    .card{
+        width: calc(100% / 5);
+        margin-right: 1rem;
+        height: auto;
+        margin-bottom: 1rem;
+    }
+
+    h4{
+        font-size:smaller;
+    }
+
+    .conteiner-music{
+        margin-top: 50px;
+    }
+
+    .navbar{
+        margin-top: 30px;
+    }
+
+}
+
+@media screen and (max-width: 576px){
+
+    .music-row{
+        display: flex;
+        flex-wrap: wrap;
+        width: 100%;
+        margin-bottom: 2rem;
+        margin-left: 0;
+
+    }
+
+    .card{
+        width: calc(100% / 3);
+        margin-right: 1rem;
+        height: auto;
+        margin-bottom: 1rem;
+    }
+
+    h4{
+        font-size:smaller;
+    }
+
+    .conteiner-music{
+        margin-top: 50px;
+    }
+
+    .navbar{
+        margin-top: 30px;
+    }
+
+}
+
+@media screen and (max-width: 560px){
+
+    .music-row{
+        display: flex;
+        flex-wrap: wrap;
+        width: 100%;
+        margin-bottom: 2rem;
+        margin-left: 0;
+
+    }
+
+    .card{
+        width: calc(100% / 3);
+        margin-right: 1rem;
+        height: auto;
+        margin-bottom: 1rem;
+    }
+
+    h4{
+        font-size:smaller;
+    }
+
+    .conteiner-music{
+        margin-top: 50px;
+    }
+
+    .navbar{
+        margin-top: 30px;
+    }
+
+    .display-none{
+        display: none;
+    }
+
+    .logo-none{
+        display: inline-block;
+    }
+
+    .dwld{
+        margin-bottom: 0.5rem;
+        margin-right: 0.3rem;
+    }
+
+    .aside-bar{
+        width: 60px;
+        padding-left: 0.7rem;
+    }
+
+    .upgrade-bar{
+        width: calc(100% - 60px);
+    }
+
+    .page{
+        width: calc(100% - 60px);
+    }
+
+    .row-volume{
+        margin-right: 0.5rem;
+    }
+}
