--- a/css/style.css
+++ b/css/style.css
@@ -279,7 +279,7 @@ h5{
     display: flex;
     flex-direction: column;
     align-items: center;
-    width:calc(100% / 7 );
+    width:calc(100% / 6 - 2rem);
     margin-right: 2rem;
     height: 280px;
 }
@@ -520,7 +520,7 @@ h5{
     }
 
     .card{
-        width: calc(100% / 5);
+        width: calc(100% / 4 - 1rem);
         margin-right: 1rem;
         height: auto;
         margin-bottom: 1rem;
@@ -548,7 +548,7 @@ h5{
     }
 
     .card{
-        width: calc(100% / 5);
+        width: calc(100% / 4 - 1rem);
         margin-right: 1rem;
         height: auto;
         margin-bottom: 1rem;
@@ -581,7 +581,7 @@ h5{
     }
 
     .card{
-        width: calc(100% / 3);
+        width: calc(100% / 2 - 1rem);
         margin-right: 1rem;
         height: auto;
         margin-bottom: 1rem;
@@ -617,7 +617,7 @@ h5{
     }
 
     .card{
-        width: calc(100% / 3);
+        width: calc(100% / 2 - 1rem);
         margin-right: 1rem;
         height: auto;
         margin-bottom: 1rem;
