--- a/css/style.css
+++ b/css/style.css
@@ -508,6 +508,31 @@ h5{
 .button-larghezza{
     width: 100%;
 }
+
+
+
+/* ANIMATION */
+.animation-row{
+    font-size: 2rem;
+    color: white;
+    position: absolute;
+    left: 2%;
+    animation-name: moving-row;
+    animation-duration: 4s;
+    animation-iteration-count: infinite;
+    animation-timing-function: calc(0s);
+}
+
+@keyframes moving-row {
+    
+    100%{
+        left: 82%;
+    }
+    
+}
+
+
+
 /* MEDIA QUERY */
 
 @media screen and (max-width: 992px){
@@ -535,6 +560,27 @@ h5{
     .conteiner-music{
         margin-top: 10px;
     }
+
+    .animation-row{
+        font-size: 2rem;
+        color: white;
+        position: absolute;
+        left: 2%;
+        animation-name: moving-row2;
+        animation-duration: 4s;
+        animation-iteration-count: infinite;
+        animation-timing-function: calc(0s);
+    }
+    
+    @keyframes moving-row2 {
+        
+        100%{
+            left: 70%;
+        }
+        
+    }
+   
+
 }
 
 
@@ -568,6 +614,24 @@ h5{
         margin-top: 30px;
     }
 
+    .animation-row{
+        font-size: 2rem;
+        color: white;
+        position: absolute;
+        left: 2%;
+        animation-name: moving-row2;
+        animation-duration: 4s;
+        animation-iteration-count: infinite;
+        animation-timing-function: calc(0s);
+    }
+    
+    @keyframes moving-row2 {
+        
+        100%{
+            left: 56%;
+        }
+        
+    }
     
 }
 
@@ -603,6 +667,25 @@ h5{
 
     .col-right-foot{
         width: 30%;
+    }
+
+    .animation-row{
+        font-size: 2rem;
+        color: white;
+        position: absolute;
+        left: 2%;
+        animation-name: moving-row2;
+        animation-duration: 4s;
+        animation-iteration-count: infinite;
+        animation-timing-function: calc(0s);
+    }
+    
+    @keyframes moving-row2 {
+        
+        100%{
+            left: 34%;
+        }
+        
     }
 
 }
@@ -670,27 +753,95 @@ h5{
     .col-right-foot{
         width: 30%;
     }
-}
 
-/* ANIMATION */
-.animation-row{
-    font-size: 2rem;
-    color: white;
-    position: absolute;
-    left: 2%;
-    animation-name: moving-row;
-    animation-duration: 4s;
-    animation-iteration-count: infinite;
-    animation-timing-function: calc(0s);
-}
-
-@keyframes moving-row {
-    
-    100%{
-        left: 82%;
+    .animation-row{
+        font-size: 2rem;
+        color: white;
+        position: absolute;
+        left: 2%;
+        animation-name: moving-row2;
+        animation-duration: 4s;
+        animation-iteration-count: infinite;
+        animation-timing-function: calc(0s);
     }
     
+    @keyframes moving-row2 {
+        
+        100%{
+            left: 49%;
+        }
+        
+    }
+
 }
+
+@media screen and (max-width: 412px){
+
+    .animation-row{
+        font-size: 2rem;
+        color: white;
+        position: absolute;
+        left: 2%;
+        animation-name: moving-row2;
+        animation-duration: 4s;
+        animation-iteration-count: infinite;
+        animation-timing-function: calc(0s);
+    }
+    
+    @keyframes moving-row2 {
+        
+        100%{
+            left: 30%;
+        }
+        
+    }
+
+    .col-right-foot{
+        display: flex;
+        flex-direction: column-reverse;
+        align-items: center;
+        color: white;
+    }
+
+    .icone-foot {
+        color: gray;
+        font-size: 0.8rem;
+        margin-right: 0.5rem;
+        margin-left: -1.3rem;
+    }
+
+    .footer-img {
+        width: 50px;
+        margin-left: 1rem;
+        margin-right: 00.6rem;
+    }
+
+    .time-song {
+        display: flex;
+        align-items: baseline;
+        width: 165%;
+    }
+
+    .icons-row {
+    color: white;
+    display: flex;
+    margin-top: 1rem;
+    padding-bottom: 1.5rem;
+    padding-left: 0.4rem;
+    } 
+
+    .row-volume{
+        margin-top: -0.7rem;
+    }
+
+
+
+
+
+
+}
+
+
 
 
 
